Fixed search bar gap for different browsers

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ a {
 }
 
 .App {
-  width: 50%;
+  width: 55%;
   margin: auto;
 }
 
@@ -42,7 +42,10 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1em;
+}
+
+.search-bar > * {
+  margin: .5em;
 }
 
 .search-bar input {
